# chemx-client-python

./: README.md  Tutorial.ipynb  pyproject.toml  requirements.txt
chemx_client/: client.py
chemx_client.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
