# pyproject.toml
[project]
name = "chemx-client"
version = "0.1.0"
description = "Удобный Python-клиент для работы с ChemX API."
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name="Arsen Sarkisian", email="sarkisyan@scamt-itmo.ru" }
]
# Зависимости дублируются здесь для системы сборки
dependencies = [
    "requests",
    "pandas"
]